--- a/myproxy/package.json
+++ b/myproxy/package.json
@@ -1,15 +1,14 @@
 {
   "name": "proxy-server",
   "version": "1.0.0",
-  "description": "HTTP/HTTPS proxy server compatible with Proxifier",
+  "description": "Simple HTTPS proxy to jsonplaceholder.typicode.com",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "http-proxy": "^1.18.1"
-  },
-  "engines": {
-    "node": ">=14"
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "morgan": "^1.10.0"
   }
 }
